Add: メールを一応送信できるようにした
ただし、微妙。

外部のメールサーバーを契約して使うのが吉！

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,5 +45,8 @@ services:
       - db
     networks:
       - go_app_network
+    environment:
+      - GMAIL_ACCOUNT=${GMAIL_ACCOUNT}
+      - GMAIL_APP_PASSWORD=${GMAIL_APP_PASSWORD}
     command: ["./docker/go/entrypoint.sh"]
     tty: true
