Update: 開発環境と本番環境を分離できるようにした
開発環境: docker-compose up

本番環境: docker-compose -f docker-comopose.yml -f production.yml up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,5 +48,5 @@ services:
     environment:
       - GMAIL_ACCOUNT=${GMAIL_ACCOUNT}
       - GMAIL_APP_PASSWORD=${GMAIL_APP_PASSWORD}
-    command: ["./docker/go/entrypoint.sh"]
+      - _ENV=dev
     tty: true
