--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.19
         
     - name: Download packages
-      run: go mod install
+      run: go mod download
 
     - name: Build
       run: go build -o ./bin/main app/cmd/main.go
